--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 
     <p>At Mozilla, we’re a global community of</p>
     <ul> <!-- changed to list in the tutorial -->
-      <li>technologists</li>
+      <li>technologist</li>
       <li>thinkers</li>
       <li>builders</li>
     </ul>
